Fix Build rebuild

--- a/src/app/kathra/components/applications/implementation-details/pipeline-widget/pipeline-widget.component.pug
+++ b/src/app/kathra/components/applications/implementation-details/pipeline-widget/pipeline-widget.component.pug
@@ -27,7 +27,7 @@ div.builds-table
       tr
         th
         th(colspan='4')
-          .ui.right.floated.small.primary.labeled.icon.button( (click)="buildPipeline()" )
+          .ui.right.floated.small.primary.labeled.icon.button([disabled]="buildResquested" (click)="buildPipeline()" )
             //i.ui.special.loader
             i.icon.cogs 
             |  Rebuild
