--- a/src/app/kathra/components/applications/new-app/new-app-api/form-app-api/form-app-api.component.pug
+++ b/src/app/kathra/components/applications/new-app/new-app-api/form-app-api/form-app-api.component.pug
@@ -65,6 +65,10 @@
     i.left.chevron.icon
     span.text FINISH
 
+  .button.validate((click)="validate()", [ngClass]="{'hidden': !isApiFileValid, 'disabled': isValidated}")
+    i.big.circle.outline.icon
+    span.text VALIDATE
+
   .button.tbc((click)="goNext()", [ngClass]="{'disabled': !isApiVersionReady()}")
     span.text ADD IMPLEMENTATION
     i.right.chevron.icon
