--- a/src/app/kathra/components/applications/new-app/new-app-implem/new-app-implem.component.pug
+++ b/src/app/kathra/components/applications/new-app/new-app-implem/new-app-implem.component.pug
@@ -26,13 +26,17 @@
     .field.response(*ngIf="newApp?.implem?.status")
       .implem-status
         .strong.label Status:
-        .status.green.loader(*ngIf="this.kathraStatus.isPengiting(newApp?.implem)")
+        .status.green.loader(*ngIf="this.kathraStatus.isPending(newApp?.implem)")
         i.status.green.checkmark.icon(*ngIf="this.kathraStatus.isReady(newApp?.implem)")
         i.status.red.remove.icon(*ngIf="this.kathraStatus.isError(newApp?.implem)")
         .strong.value {{ newApp.implem.status }}
       .label This operations may take a few minutes.
 
 .controls
+  .button.validate((click)="validate()", [ngClass]="{'disabled': !this.implemForm.valid}")
+    i.big.circle.outline.icon
+    span.text VALIDATE
+
   .button.done.hidden([routerLink]="['/kathra', 'applications']")
     i.left.chevron.icon
     span.text FINISH
