--- a/src/app/kathra/components/applications/implementation-details/implementation-details.component.scss
+++ b/src/app/kathra/components/applications/implementation-details/implementation-details.component.scss
@@ -36,6 +36,8 @@
       color: #9FBCBB;
     }
 
+    
+
     .columns {
       flex: 1;
       width: 100%;
@@ -113,6 +115,26 @@
       .filters {
         width: 30%;
         min-height: 0;
+
+
+        .delete-implementation.button {
+          width: 70%;
+          padding: 1vh;
+          align-self: end;
+          background-color: #a78080;
+          color: whitesmoke;
+          border: 1px solid lightgrey;
+          border-radius: 5px;
+          text-align: center;
+          font-size: 1.2em;
+          cursor: pointer;
+          user-select: none;
+          &:hover {
+            background-color:#a78080;
+          }
+          margin-bottom: 25px;
+        }
+      
 
         .component-details.button {
           width: 70%;
