--- a/src/app/kathra/components/catalog/catalog.component.scss
+++ b/src/app/kathra/components/catalog/catalog.component.scss
@@ -388,10 +388,11 @@ kathra-modal {
       }
     }
 
-    .content {
+    .catalog-item-content {
       flex: 1;
       width: 100%;
       display: flex;
+      overflow: auto;
       flex-flow: column nowrap;
 
       .infos {
