--- a/src/app/kathra-data/components/kathra-app/kathra-app.component.pug
+++ b/src/app/kathra-data/components/kathra-app/kathra-app.component.pug
@@ -2,9 +2,9 @@
   .header
     //.team.color([style.backgroundColor]="app.licence == 'opensource' ? white: getAppColor(app.licence, 'normal')")
     .content
-      .image
+      .image(*ngIf="catalogEntryPackage.catalogEntry.icon != null")
         img.logo([src]="catalogEntryPackage.catalogEntry.icon")
-      .name(title="{{catalogEntryPackage.catalogEntry.name}}")
+      .name(title="{{ catalogEntryPackage.catalogEntry.name }}")
         .text {{ catalogEntryPackage.catalogEntry.name }}
       .controls(*ngIf="display != 'compact'")
         .favorite
@@ -12,5 +12,5 @@
         .select
           i.grey.check.circle.outline.icon
   .footer(*ngIf="display != 'compact'")
-    .cat([style.backgroundColor]="color.normal") {{ catalogEntryPackage.catalogEntry.name }}
-    .infos([style.backgroundColor]="color.light") {{ catalogEntryPackage.catalogEntry.description }}
+    .cat([style.backgroundColor]="color.normal") {{ catalogEntryPackage.versions[0].version }}
+    .infos([style.backgroundColor]="color.light") {{ catalogEntryPackage.catalogEntry.description }}run
