--- a/src/app/kathra/components/catalog/catalog.component.pug
+++ b/src/app/kathra/components/catalog/catalog.component.pug
@@ -5,13 +5,13 @@
       .radio.filter
         label Internal
         .checkbox
-          input(type="checkbox" formControlName="irtsystemx" id="irtsystemx", (change)="refreshFilters()")
-          label(for="irtsystemx")
+          input(type="checkbox" formControlName="internal" id="internal", (change)="refreshFilters()")
+          label(for="internal")
       .radio.filter
         label External
         .checkbox
-          input(type="checkbox" formControlName="opensource" id="opensource", (change)="refreshFilters()")
-          label(for="opensource")
+          input(type="checkbox" formControlName="external" id="internal", (change)="refreshFilters()")
+          label(for="external")
 
     .flex-filler
 
