--- a/src/app/kathra/components/applications/app-home/app-home.component.pug
+++ b/src/app/kathra/components/applications/app-home/app-home.component.pug
@@ -2,9 +2,9 @@
   .title DEV STUDIO
 
   .gitlab.app
-      a.button(target="_blank" href="https://git.kathra.org")
+      a.button(target="_blank" href="https://kathra.org")
         i.large.left.aligned.right.long.arrow.icon
-        | Gitlab
+        | Kathra.org
 
   a.button.create.new.comp([routerLink]="['new', 'component']", *ngIf="selectedTab == 'components'", [@hidingAnimation])
     i.plus.icon
