--- a/src/app/kathra/components/catalog/new-catalogentry/new-catalogentry.component.scss
+++ b/src/app/kathra/components/catalog/new-catalogentry/new-catalogentry.component.scss
@@ -177,4 +177,29 @@
       margin: 10px 30px;
     }
   }
+  .row {
+    width:100%;
+  }
+  .status, .value {
+    display: block;
+    float: right;
+  }
+  .status {
+    margin-left: 5px;
+  }
+  .loader {
+    border: 8px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+    margin-top: -10px;
+    margin-left: 10px;
+  }
+
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 }
